--- a/practicum/week-5/index.html
+++ b/practicum/week-5/index.html
@@ -44,7 +44,7 @@
         </ol>
     </div>
     <div class="iframe-container">
-        <iframe id="myApplicationFrame" src="https://AlianaC.github.io/imagequiz/" allowfullscreen></iframe>
+        <iframe id="myApplicationFrame" src="https://AlianaC.github.io/imagesquiz/" allowfullscreen></iframe>
     </div>
 </body>
 
