--- a/practicum/week-6/index.html
+++ b/practicum/week-6/index.html
@@ -37,7 +37,7 @@
        
     </div>
     <div class="iframe-container">
-        <iframe id="myApplicationFrame" src="" allowfullscreen></iframe>
+        <iframe id="myApplicationFrame" src="https://AlianaC.github.io/imagequiz/" allowfullscreen></iframe>
     </div>
 </body>
 
